--- a/config/yugabyte/regression_pipelines/conditional_workloads/postgres/CW2_on_conflict_do_update.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/postgres/CW2_on_conflict_do_update.yaml
@@ -42,8 +42,8 @@ microbenchmark:
                         params: [ 1, 6000000 ]
                     -   name: addr_
                         count: 1
-                        util: PrimaryStringGen
-                        params: [ 1, 50 ]
+                        util: OneStringFromArray
+                        params: [ "addr for the client" ]
                     -   name: bal_
                         count: 1
                         util: PrimaryIntGen
@@ -61,8 +61,8 @@ microbenchmark:
                                   params: [ 1, 1000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 1000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 1000000]
 
@@ -78,8 +78,8 @@ microbenchmark:
                                   params: [ 1000001, 2000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1000001, 2000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1000001, 2000000]
 
@@ -95,8 +95,8 @@ microbenchmark:
                                   params: [ 2000001, 3000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 2000001, 3000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 2000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 2000001, 3000000]
 
@@ -112,8 +112,8 @@ microbenchmark:
                                   params: [ 3000001, 4000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 3000001, 4000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 3000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 3000001, 4000000]
 
@@ -129,8 +129,8 @@ microbenchmark:
                                   params: [ 4000001, 5000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 4000001, 5000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 4000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 4000001, 5000000]
 
@@ -145,8 +145,8 @@ microbenchmark:
                                   params: [ 5000001, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 5000001, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 5000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 5000001, 6000000]
 
@@ -161,80 +161,80 @@ microbenchmark:
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
 
@@ -249,8 +249,8 @@ microbenchmark:
                                   params: [ 6000001, 7000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 6000001, 7000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 6000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 6000001, 7000000]
 
@@ -266,7 +266,7 @@ microbenchmark:
                                   params: [ 7000001, 8000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 7000001, 8000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 7000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 7000001, 8000000]
