--- a/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW2_on_conflict_do_update.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW2_on_conflict_do_update.yaml
@@ -44,8 +44,8 @@ microbenchmark:
                         params: [ 1, 6000000 ]
                     -   name: addr_
                         count: 1
-                        util: PrimaryStringGen
-                        params: [ 1, 50 ]
+                        util: OneStringFromArray
+                        params: [ "addr for the client" ]
                     -   name: bal_
                         count: 1
                         util: PrimaryIntGen
@@ -63,8 +63,8 @@ microbenchmark:
                                   params: [ 1, 1000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 1000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 1000000 ]
 
@@ -80,8 +80,8 @@ microbenchmark:
                                   params: [ 1000001, 2000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1000001, 2000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1000001, 2000000]
 
@@ -97,8 +97,8 @@ microbenchmark:
                                   params: [ 2000001, 3000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 2000001, 3000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 2000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 2000001, 3000000]
 
@@ -114,8 +114,8 @@ microbenchmark:
                                   params: [ 3000001, 4000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 3000001, 4000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 3000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 3000001, 4000000]
 
@@ -131,8 +131,8 @@ microbenchmark:
                                   params: [ 4000001, 5000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 4000001, 5000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 4000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 4000001, 5000000]
 
@@ -147,8 +147,8 @@ microbenchmark:
                                   params: [ 5000001, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 5000001, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 5000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 5000001, 6000000]
 
@@ -163,80 +163,80 @@ microbenchmark:
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
 
@@ -251,8 +251,8 @@ microbenchmark:
                                   params: [ 6000001, 7000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 6000001, 7000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 6000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 6000001, 7000000]
 
@@ -268,7 +268,7 @@ microbenchmark:
                                   params: [ 7000001, 8000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 7000001, 8000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 7000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 7000001, 8000000]
