--- a/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW2_on_conflict_do_update.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW2_on_conflict_do_update.yaml
@@ -43,8 +43,8 @@ microbenchmark:
                         params: [ 1, 6000000 ]
                     -   name: addr_
                         count: 1
-                        util: PrimaryStringGen
-                        params: [ 1, 50 ]
+                        util: OneStringFromArray
+                        params: [ "addr for the client" ]
                     -   name: bal_
                         count: 1
                         util: PrimaryIntGen
@@ -62,8 +62,8 @@ microbenchmark:
                                   params: [ 1, 1000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 1000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 1000000]
 
@@ -79,8 +79,8 @@ microbenchmark:
                                   params: [ 1000001, 2000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1000001, 2000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1000001, 2000000]
 
@@ -96,8 +96,8 @@ microbenchmark:
                                   params: [ 2000001, 3000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 2000001, 3000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 2000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 2000001, 3000000]
 
@@ -113,8 +113,8 @@ microbenchmark:
                                   params: [ 3000001, 4000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 3000001, 4000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 3000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 3000001, 4000000]
 
@@ -130,8 +130,8 @@ microbenchmark:
                                   params: [ 4000001, 5000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 4000001, 5000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 4000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 4000001, 5000000]
 
@@ -146,8 +146,8 @@ microbenchmark:
                                   params: [ 5000001, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 5000001, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 5000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 5000001, 6000000]
 
@@ -162,80 +162,80 @@ microbenchmark:
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 6000000]
 
@@ -250,8 +250,8 @@ microbenchmark:
                                   params: [ 6000001, 7000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 6000001, 7000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 6000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 6000001, 7000000]
 
@@ -267,7 +267,7 @@ microbenchmark:
                                   params: [ 7000001, 8000000 ]
                               -   util: PrimaryIntGen
                                   params: [ 7000001, 8000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 7000001, 50 ]
+                              -   util: OneStringFromArray
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 7000001, 8000000]
